--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.3.2",
+    "react-css-modules": "^4.7.2",
     "react-dom": "^16.3.2",
     "react-scripts": "2.0.0-next.b2fd8db8"
   },
