--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
         "import/no-named-as-default": "off",
         "import/no-named-as-default-member": "off",
         "import/no-extraneous-dependencies": "off",
-        "react/default-props-match-prop-types": "off"
+        "react/default-props-match-prop-types": "off",
+        "prefer-const": "warn"
     }
 }
